--- a/report/main.tex
+++ b/report/main.tex
@@ -812,7 +812,7 @@ Discorso analogo per i cerchi generati a partire dall'immagine caso specifico.
 	\begin{minipage}[b]{0.49\linewidth}
 		
 		\def\svgwidth{\linewidth}
-		\input{test_data1.pdf_tex}
+		\input{test_data.pdf_tex}
 		\caption{Analisi dell'errore sul parametro $\mathbb C_{11}$}\label{fig:convergence}
 	\end{minipage} 
 	\begin{minipage}[b]{0.49\linewidth}
